--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,6 +41,26 @@
 	    <url-pattern>*.png</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
+	    <servlet-name>default</servlet-name>
+	    <url-pattern>*.eot</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+	    <servlet-name>default</servlet-name>
+	    <url-pattern>*.svg</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+	    <servlet-name>default</servlet-name>
+	    <url-pattern>*.ttf</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+	    <servlet-name>default</servlet-name>
+	    <url-pattern>*.woff</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+	    <servlet-name>default</servlet-name>
+	    <url-pattern>*.woff2</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
 		<servlet-name>Dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
